# python-algorithms

./: pyproject.toml
patterns/src/1_sliding_window/average_of_subarrays/: average_of_subarrays_ry.py
patterns/src/1_sliding_window/fruits_into_baskets/: fruits_into_baskets ry.py
patterns/src/1_sliding_window/longest_sub_array_with_ones_after_replacement/: length_of_longest_substring_ry.py
patterns/src/1_sliding_window/longest_substr_with_distinct_chars/: longest_substr_with_distinct_chars_ry.py
patterns/src/1_sliding_window/longest_substr_with_max_k_distinct_chars/: longest_subtr_ry.py
patterns/src/1_sliding_window/longest_substr_with_same_letters_after_replacement/: longest_substr_with_same_letters_ry.py
patterns/src/1_sliding_window/maximum_sum_subarray_of_size_K/: maximum_sum_subarray_of_size_ry.py
patterns/src/1_sliding_window/smallest_subarray_with_greater_sum/: smallest_subarray_with_greater_sum_ry.py
patterns/src/1_sliding_window/subarrays_with_product_less_than_target/: find_subarrays_ry.py
patterns/src/2_two_pointers/compare_strings_containing_backspaces/: backspace_compare_ry.py
patterns/src/2_two_pointers/dutch_national_flag/: dutch_flag_sort_ry.py
patterns/src/2_two_pointers/pair_with_target_sum/: pair_with_target_sum_ry.py
patterns/src/2_two_pointers/remove_duplicates/: remove_duplicates_ry.py
patterns/src/2_two_pointers/remove_keys/: remove_keys_ry.py
patterns/src/2_two_pointers/square_sorted_array/: square_sorted_array_ry.py
