[tool.poetry]
name = "python-algorithms"
version = "0.1.0"
description = ""
authors = ["ryukyi <ryukyi@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
ipython = "^8.25.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
